--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "styled-components": "^6.1.13"
   },
   "devDependencies": {
-    "@rollup/rollup-darwin-arm64": "^4.53.2",
     "@vitejs/plugin-react": "^4.3.2",
+    "rollup": "^3.29.4",
     "vite": "^5.4.8"
   }
 }
