fixing gor netlify

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  command = "yarn install --ignore-optional && yarn build"
+  build.command = "npm install && npm run build"
   publish = "dist"
 
 [build.environment]
